Delete Profile, add employee
